# Mini_segway

./: CMakeLists.txt  Makefile  components.txt
build2/: CMakeCache.txt  cmake_install.cmake  main2.hex
core/: Makefile
lib/GPT/: Makefile  gpt.c  gpt.d  gpt.h
lib/Wire/: Makefile
src/: controllers.cpp  controllers.h  io.cpp  io.h  main.cpp
